# huayra-accesibility-settings

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  huayra-hig.h  main.c
data/: Makefile.am  huayra-accessibility-settings.desktop
debian/: changelog  control  copyright  install  rules
debian/etc/dconf/db/site.d/: 10_huayra_accesibiliy_settings
debian/usr/share/applications/: orca.desktop
src/: Makefile.am  huayra-hig.c  main.c  mate-session.c  mate-session.h  populate-cursors.c  populate-cursors.h
